--- a/src/components/ProductTable.css
+++ b/src/components/ProductTable.css
@@ -93,6 +93,15 @@
   -ms-animation: fadeIn 1s;
 }
 
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgb(89, 89, 89);
+  padding: 20px;
+}
+
 @keyframes fadeIn {
   0% { opacity: 0; }
   100% { opacity: 1; }
